tests/compile_fail/pipeline_stage_alias_non_pipeline_misuse.cpp
#include <pb/pipeline.hpp>

struct NotAPipeline {};

// Should fail with a public ValidPipeline constraint diagnostic for metadata alias misuse.
using BadStage = pb::pipeline_stage_t<NotAPipeline, 0>;

int main() { return 0; }
